--- a/src/app/ecommerse/product-detail/product-detail.component.html
+++ b/src/app/ecommerse/product-detail/product-detail.component.html
@@ -209,5 +209,48 @@
           </li>
         </ul>
     </div>
+</div>  
+<div class="row">
+  <h5 class="section-title">Productos relacionados</h5>
+ <div class="img-container-relations-products">
+   <div class="controls">
+     <button class="controls-slider" id="left">
+      <i class="fas fa-caret-left"></i>
+     </button>
+     <button class="controls-slider" id="right"> <i class="fas fa-caret-right"></i>
+    </button>
+   </div>
+   <div class="img-container">
+    <img src="../../../assets/prod.jpg" class="img-responsive img-thumbnail mx-auto d-block" alt="Cinque Terre">
+    <div class="caption">
+      <p>Lorem ipsum donec id elit non mi porta gravida at eget metus</p>
+    </div>   
+  </div>
+   <div class="img-container">
+    <img src="../../../assets/t2.jpg" class="img-responsive img-thumbnail mx-auto d-block" alt="Cinque Terre">
+    <div class="caption">
+      <p>Lorem ipsum donec id elit non mi porta gravida at eget metus</p>
+    </div>  
+  </div>
+   <div class="img-container">
+    <img src="../../../assets/t3.jpg" class="img-responsive img-thumbnail mx-auto d-block" alt="Cinque Terre">
+    <div class="caption">
+      <p>Lorem ipsum donec id elit non mi porta gravida at eget metus</p>
+    </div>  
+  </div>
+   <div class="img-container">
+    <img src="../../../assets/t4.jpg" class="img-responsive img-thumbnail mx-auto d-block" alt="Cinque Terre">
+    <div class="caption">
+      <p>Lorem ipsum donec id elit non mi porta gravida at eget metus</p>
+    </div>  
+  </div>
+   <div class="img-container">
+    <img src="../../../assets/prod.jpg" class="img-responsive img-thumbnail mx-auto d-block" alt="Cinque Terre">
+    <div class="caption">
+      <p>Lorem ipsum donec id elit non mi porta gravida at eget metusdonec</p>
+    </div>  
+  </div>
+ </div>
+</div>  
 </div>     
 
