--- a/src/app/view-main/carrousel/carrousel.component.html
+++ b/src/app/view-main/carrousel/carrousel.component.html
@@ -11,7 +11,7 @@
         <div class="container">
           <div class="content">
             <h1>Heading</h1>
-            <p lass="text-justify">Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+            <p class="text-justify">Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
             <p class="view-more-btn">Ver mas</p>
           </div>
         </div>
