--- a/src/app/ecommerse/product-detail/product-detail.component.css
+++ b/src/app/ecommerse/product-detail/product-detail.component.css
@@ -131,7 +131,7 @@ ul.descripcion-product-items {
   border-top: solid 3px;
   border-color:  #f0c14b;
 }
-
+/**/
 .img-container img {
   width: auto;
   height: 100%;
